Closed Bug 879092 Opened 12 years ago Closed 12 years ago

Have different runtime abort messages for the different error types (e.g. MsgNotKnown, MsgNotAllowed, MsgPayloadError etc.)

Categories

(Core :: IPC, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: gkw, Assigned: gkw)

References

Details

Attachments

(1 file)

Looking at http://hg.mozilla.org/mozilla-central/annotate/8b1bfcf0ce6e/dom/ipc/ContentChild.cpp#l946 : void ContentChild::ProcessingError(Result what) { switch (what) { case MsgDropped: QuickExit(); case MsgNotKnown: case MsgNotAllowed: case MsgPayloadError: case MsgProcessingError: case MsgRouteError: case MsgValueError: NS_RUNTIMEABORT("aborting because of fatal error"); default: NS_RUNTIMEABORT("not reached"); } } It seems that all of the error types (e.g. MsgNotKnown, MsgNotAllowed, MsgPayloadError etc.) are lumped into the same runtime abort message. This makes bugs like bug 867025 and bug 878366 difficult to debug.
(this came after discussion w/dveditz on bug 878366)
Moving to Core: IPC.
Component: General → IPC
Product: Boot2Gecko → Core
Version: unspecified → Trunk
I'd be happy to take a patch here.
This is not a regression.
Keywords: regression
Attached patch patch v0Splinter Review
I'm not sure if this is the best approach.
Assignee: nobody → gary
Status: NEW → ASSIGNED
Attachment #757771 - Flags: feedback?(justin.lebar+bug)
Comment on attachment 757771 [details] [diff] [review] patch v0 This is fine with me!
Attachment #757771 - Flags: feedback?(justin.lebar+bug) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: