Bug 879092 - Have different runtime abort messages for the different error types. r=jlebar